Add authentication and comprehensive documentation
- Add password-protected authentication to dashboard
- Create auth.py module with secure login/logout
- Add comprehensive deployment guides
- Complete Phase 4: Documentation (README, API docs, Database docs)
- Add Phase 3: Testing infrastructure with 99% coverage
- Protect API quota with authentication barrier
- Ready for Streamlit Cloud deployment

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ __pycache__/
 *.pyc
 .venv/
 venv/
+
+# Testing artifacts
+htmlcov/
+.coverage
+.pytest_cache/
+.mypy_cache/
+
+# Streamlit secrets
+.streamlit/secrets.toml
