--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,27 @@
+# Environment variables (contains API keys)
 .env
+
+# Python cache
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
 .venv/
 venv/
+env/
+
+# Database files (contains user data)
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
+data/*.db
+
+# Log files
+*.log
+logs/
 
 # Testing artifacts
 htmlcov/
@@ -10,5 +29,21 @@ htmlcov/
 .pytest_cache/
 .mypy_cache/
 
-# Streamlit secrets
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Streamlit secrets (contains passwords and API keys)
 .streamlit/secrets.toml
+
+# Temporary files
+*.tmp
+*.bak
+*.backup
